Increase source compat to 11